--- a/Gallery/app/src/main/res/layout/video_item.xml
+++ b/Gallery/app/src/main/res/layout/video_item.xml
@@ -22,9 +22,9 @@
         app:layout_constraintDimensionRatio="1"
         android:src="@drawable/ic_play"
         tools:ignore="MissingConstraints"
+        android:background="@color/transparent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
