--- a/Gallery/app/src/main/res/drawable/custom_bar.xml
+++ b/Gallery/app/src/main/res/drawable/custom_bar.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#1b1b1b"/>
+    <gradient android:type="linear"
+        android:startColor="#00BCD4"
+        android:centerColor="#CF4013"
+        android:endColor="#FFC107"/>
     <size android:height="60dp" android:width="60dp"/>
     <corners android:radius="15dp"/>
 </shape>
