--- a/Gallery/app/src/main/res/layout/activity_by_people.xml
+++ b/Gallery/app/src/main/res/layout/activity_by_people.xml
@@ -5,22 +5,21 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/black"
     tools:context=".MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/_175sdp"
-        android:background="@drawable/toolbar_bg"
+        android:background="@color/transparent"
         android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.Gallery">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            app:title="People"
+            app:title="@string/view_people"
             app:expandedTitleGravity="center"
             app:expandedTitleTextAppearance="@style/ExpandedText"
             app:contentScrim="?attr/colorPrimary"
@@ -49,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_gravity="bottom"
-        android:background="@drawable/toolbar_bg"
+        android:background="@color/transparent"
         app:layout_anchorGravity="center">
 
         <ImageButton
@@ -126,7 +125,7 @@
         android:contentDescription="Camera"
         android:src="@drawable/ic_camera"
         app:tint="@color/black"
-        android:background="@drawable/background_camera_button"
+        android:background="@drawable/custom_button"
         android:layout_marginRight="20dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
