--- a/Gallery/app/src/main/res/layout/activity_settings.xml
+++ b/Gallery/app/src/main/res/layout/activity_settings.xml
@@ -5,15 +5,14 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/black"
     tools:context=".Settings">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/_175sdp"
-        android:background="@drawable/toolbar_bg"
+        android:background="@color/transparent"
         android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.Gallery">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
@@ -40,7 +39,6 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:background="@color/black"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <androidx.appcompat.widget.SwitchCompat
@@ -50,7 +48,6 @@
             android:background="@drawable/custom_bar"
             android:fontFamily="sans-serif-condensed"
             android:text="@string/dark_mode"
-            android:textColor="@color/white"
             android:textSize="@dimen/_18ssp"
             android:padding="@dimen/_10sdp"
             android:layout_margin="@dimen/_10sdp"
@@ -66,7 +63,6 @@
             android:background="@drawable/custom_bar"
             android:fontFamily="sans-serif-condensed"
             android:text="@string/language"
-            android:textColor="@color/white"
             android:textSize="@dimen/_18ssp"
             android:padding="@dimen/_10sdp"
             android:layout_margin="@dimen/_10sdp"
