--- a/Gallery/app/src/main/res/layout/activity_video_by_date.xml
+++ b/Gallery/app/src/main/res/layout/activity_video_by_date.xml
@@ -5,15 +5,14 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/black"
     tools:context=".ByDateActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/_175sdp"
-        android:background="@drawable/toolbar_bg"
+        android:background="@color/transparent"
         android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.Gallery">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
@@ -55,7 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_gravity="bottom"
-        android:background="@drawable/toolbar_bg"
+        android:background="@color/transparent"
         app:layout_anchorGravity="center">
 
         <ImageButton
@@ -132,7 +131,7 @@
         android:contentDescription="Camera"
         android:src="@drawable/ic_camera"
         app:tint="@color/black"
-        android:background="@drawable/background_camera_button"
+        android:background="@drawable/custom_button"
         android:layout_marginRight="20dp"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
