--- a/Gallery/app/src/main/res/layout/image_screen.xml
+++ b/Gallery/app/src/main/res/layout/image_screen.xml
@@ -4,38 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#333333"
     tools:context=".FullScreenActivity">
+    <include
+        android:id="@+id/toolbarFullscreen"
+        layout="@layout/toolbar" />
+
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/full_screen"/>
 
-    <ImageButton
-        android:id="@+id/btnMore"
-        android:layout_width="@dimen/_30sdp"
-        android:layout_height="@dimen/_30sdp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_marginStart="@dimen/_28sdp"
-        android:layout_marginLeft="@dimen/_28sdp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/custom_button"
-        android:src="@drawable/ic_more"
-        app:layout_constraintVertical_bias="0.529" />
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:layout_alignParentBottom="true">
+        <com.google.android.material.bottomappbar.BottomAppBar
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:backgroundTint="@color/transparent"
+            app:contentInsetLeft="0dp"
+            app:contentInsetRight="0dp"
+            app:contentInsetStart="0dp"
+            app:contentInsetEnd="0dp">
+            <com.google.android.material.bottomnavigation.BottomNavigationView
+                android:id="@+id/bottombarFullscreen"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/transparent"
+                app:menu="@menu/menu_fullscreen"
+                app:labelVisibilityMode="unlabeled"/>
 
-    <ImageButton
-        android:id="@+id/btnBack"
-        android:layout_width="@dimen/_30sdp"
-        android:layout_height="@dimen/_30sdp"
-        android:layout_marginStart="@dimen/_7sdp"
-        android:layout_marginLeft="@dimen/_7sdp"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:background="@drawable/custom_button"
-        android:src="@drawable/ic_back_2"
-        />
+        </com.google.android.material.bottomappbar.BottomAppBar>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+<!--    <ImageButton-->
+<!--        android:id="@+id/btnMore"-->
+<!--        android:layout_width="@dimen/_30sdp"-->
+<!--        android:layout_height="@dimen/_30sdp"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_alignParentRight="true"-->
+<!--        android:layout_marginTop="@dimen/_5sdp"-->
+<!--        android:layout_marginStart="@dimen/_28sdp"-->
+<!--        android:layout_marginLeft="@dimen/_28sdp"-->
+<!--        android:layout_marginEnd="10dp"-->
+<!--        android:layout_marginRight="10dp"-->
+<!--        android:background="@drawable/custom_button"-->
+<!--        android:src="@drawable/ic_more"-->
+<!--        app:layout_constraintVertical_bias="0.529" />-->
+
+<!--    <ImageButton-->
+<!--        android:id="@+id/btnBack"-->
+<!--        android:layout_width="@dimen/_30sdp"-->
+<!--        android:layout_height="@dimen/_30sdp"-->
+<!--        android:layout_marginStart="@dimen/_7sdp"-->
+<!--        android:layout_marginLeft="@dimen/_7sdp"-->
+<!--        android:layout_marginTop="@dimen/_5sdp"-->
+<!--        android:layout_alignParentStart="true"-->
+<!--        android:layout_alignParentLeft="true"-->
+<!--        android:background="@drawable/custom_button"-->
+<!--        android:src="@drawable/ic_back_2"-->
+<!--        />-->
+
+<!--    <ImageButton-->
+<!--        android:id="@+id/btnFavorite"-->
+<!--        android:layout_width="@dimen/_30sdp"-->
+<!--        android:layout_height="@dimen/_30sdp"-->
+<!--        android:layout_marginStart="@dimen/_10sdp"-->
+<!--        android:layout_marginLeft="@dimen/_10sdp"-->
+<!--        android:layout_marginBottom="@dimen/_5sdp"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:background="@drawable/custom_button"-->
+<!--        android:src="@drawable/btn_favorite" />-->
 </RelativeLayout>
