--- a/Gallery/app/src/main/res/layout/pass_req.xml
+++ b/Gallery/app/src/main/res/layout/pass_req.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/black">
-
+    android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,7 +15,6 @@
             android:layout_height="@dimen/_60sdp"
             android:text="@string/input_your_password"
             android:textSize="@dimen/_25ssp"
-            android:textColor="@color/white"
             android:fontFamily="sans-serif"
             android:gravity="center"/>
 
@@ -25,9 +23,8 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/_50sdp"
             android:background="@drawable/custom_bar"
-            android:backgroundTint="@color/white"
-            android:textColor="@color/black"
             android:textSize="@dimen/_16ssp"
+            android:backgroundTint="#dfdfdf"
             android:ems="10"
             android:drawableLeft="@drawable/ic_lock"
             android:hint="@string/hint_password"
@@ -39,12 +36,14 @@
             android:id="@+id/logInButton"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
-            android:background="@drawable/custom_bar"
             android:layout_marginTop="@dimen/_10sdp"
+            android:backgroundTintMode="add"
+            android:backgroundTint="@color/teal_700"
             android:text="@string/log_in"
             android:textSize="@dimen/_16ssp"
             android:onClick="onClick"
-            android:layout_below="@+id/input_password"/>
+            android:layout_below="@+id/input_password"
+            tools:targetApi="lollipop" />
 
     </RelativeLayout>
 
