--- a/Gallery/app/src/main/res/layout/toolbar.xml
+++ b/Gallery/app/src/main/res/layout/toolbar.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.Toolbar
-    android:layout_width="match_parent"
+<androidx.appcompat.widget.Toolbar android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:background="@drawable/toolbar_bg"
-    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@android:color/transparent"
+    android:elevation="4dp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    app:popupTheme="?popupTheme">
 
     </androidx.appcompat.widget.Toolbar>
 
