--- a/Gallery/app/src/main/res/layout/video_section.xml
+++ b/Gallery/app/src/main/res/layout/video_section.xml
@@ -5,15 +5,14 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/black"
     tools:context=".MainActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/_175sdp"
-        android:background="@drawable/toolbar_bg"
+        android:background="@color/transparent"
         android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.Gallery">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
@@ -49,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:layout_gravity="bottom"
-        android:background="@drawable/toolbar_bg"
+        android:background="@color/transparent"
         app:layout_anchorGravity="center">
 
         <ImageButton
@@ -119,12 +118,12 @@
     <ImageButton
         android:id="@+id/btn_record_video"
         android:layout_width="@dimen/_40sdp"
-        android:layout_height="45dp"
+        android:layout_height="@dimen/_40sdp"
         android:layout_gravity="bottom|right"
         android:layout_marginEnd="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="70dp"
-        android:background="@drawable/background_camera_button"
+        android:background="@drawable/custom_button"
         android:contentDescription="Camera"
         android:src="@drawable/ic_record_video"
         app:tint="@color/black" />
