--- a/Gallery/app/src/main/res/menu/setting.xml
+++ b/Gallery/app/src/main/res/menu/setting.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/create_album"
-        android:title="@string/create_album"/>
+
     <item android:id="@+id/change_to_by_date"
         android:title="@string/view_by_date"/>
+
+    <item android:id="@+id/change_linear_layout"
+        android:title="@string/change_to_linear_layout"/>
+    <item android:id="@+id/change_grid_layout"
+        android:title="@string/change_to_grid_layout"/>
+
     <item android:id="@+id/setting"
         android:title="@string/settings"/>
 </menu>
