--- a/Gallery/app/src/main/res/menu/setting_for_image_only.xml
+++ b/Gallery/app/src/main/res/menu/setting_for_image_only.xml
@@ -4,14 +4,13 @@
     <item android:id="@+id/change_to_by_date"
         android:title="@string/view_by_date"/>
     <item android:id="@+id/change_to_by_people"
-        android:title="View by people"/>
-
+        android:title="@string/view_by_people"/>
     <item android:id="@+id/change_linear_layout"
-        android:title="Change to Linear layout"/>
+        android:title="@string/change_to_linear_layout"/>
     <item android:id="@+id/change_grid_layout"
-        android:title="Change to Grid layout"/>
+        android:title="@string/change_to_grid_layout"/>
     <item android:id="@+id/slideshow"
-        android:title="Slideshow"/>
+        android:title="@string/slideshow"/>
     <item android:id="@+id/setting"
         android:title="@string/settings"/>
 </menu>
