--- a/Gallery/app/src/main/res/values-night/themes.xml
+++ b/Gallery/app/src/main/res/values-night/themes.xml
@@ -2,15 +2,25 @@
     <!-- Base application theme. -->
     <style name="Theme.Gallery" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/light</item>
+        <item name="colorPrimaryVariant">@color/teal_200</item>
+        <item name="colorPrimaryDark">@color/teal_200</item>
+        <item name="colorOnPrimary">@color/teal_200</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
+        <item name="colorSecondary">@color/light</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/dark</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:background">@color/dark</item>
+        <item name="android:textColor">@color/light</item>
+        <item name="android:theme">@style/ThemeOverlay.AppCompat.Dark.ActionBar</item>
+        <item name="navigationIconTint">@color/light</item>
+    </style>
+    <style name="ExpandedText" parent="@android:style/TextAppearance">
+        <item name="android:textColor">@color/light</item>
+        <item name="android:textSize">@dimen/_37ssp</item>
+        <item name="fontFamily">sans-serif-condensed</item>
     </style>
 </resources>
